ubuntu-dev-tools (0.139) UNRELEASED; urgency=low

  * syncpackage, backportpackage, sponsor-patch: Use -nc when building source
    packages. Avoids needing build-deps on the build machine.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 23 Dec 2011 22:33:17 +0200

ubuntu-dev-tools (0.138) unstable; urgency=low

  [ Benjamin Drung ]
  * sponsor-patch:
    - Use syncpackage instead of subscribing ubuntu-archive for sync requests,
      because syncpackage supports sponsorship now.
    - Check if the sponsored bug is marked as duplicate (LP: #896733).
    - Allow user to override sanity checks (LP: #896733).

  [ Stefano Rivera ]
  * Correct reference to qemu-user-static in pbuilder-dist.1 (Closes: #651999)
  * mk-sbuild: Don't install devscripts by default (LP: #904502)
  * backportpackage: Add --release-pocket option, rather than relying entirely
    on heuristics (Closes: #651546)
  * syncpackage: Mention sponsorship when closing bugs (LP: #904288)

 -- Benjamin Drung <bdrung@debian.org>  Wed, 21 Dec 2011 22:38:35 +0100

ubuntu-dev-tools (0.137) unstable; urgency=low

  [ Stefano Rivera ]
  * mk-sbuild: Make --eatmydata command line flag actually work.
  * Remove dgetlp. No longer needed.
  * Use httplib2 everywhere that we do https. The python stdlib doesn't do
    certificate verification.
  * requestbackport:
    - Check for existing backport bugs first.
    - Check that there are published binaries (i.e. not stuck in bin-NEW).
  * pull-lp-source, requestbackport: Take the latest version from any
    non-backports pocket. Implemented by making lpapicache's getSourcePackage
    smarter.
  * sponsor-patch: Build a source package for lintian to run on, when not
    test-building syncs.
  * sponsor-patch: Check the bug's title, not the task, when determining
    source series for syncs.
  * mk-sbuild, pbuilder-dist, ubuntu-build: Add armhf.
  * pull-debian-source, pull-lp-source: Resolve the source package (via DDE),