@@ -2,6 +2,7 @@ ubuntu-dev-tools (0.139) UNRELEASED; urgency=low
 
   * syncpackage, backportpackage, sponsor-patch: Use -nc when building source
     packages. Avoids needing build-deps on the build machine.
+  * sponsor-patch: Determine the task from the UDD branch.
 
  -- Stefano Rivera <stefanor@debian.org>  Fri, 23 Dec 2011 22:33:17 +0200
 
